<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <!--    android:background="@drawable/bg">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/top_gradient"/>
        <TextView
            android:layout_marginTop="-60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Heading"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:paddingStart="80dp"
            android:paddingEnd="40dp"
            android:text="আপনি কি অন্য কোনো পণ্যের ছবি তুলতে চান? "
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <Button
            android:id="@+id/yesBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/yes"
            android:textSize="30sp"
            android:padding="10dp"
            android:background="@drawable/btn_round"
            android:layout_marginTop="120dp" />

        <Button
            android:id="@+id/noBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/No"
            android:textSize="30sp"
            android:padding="10dp"
            android:background="@drawable/btn_round"
            android:layout_marginTop="20dp" />

    </LinearLayout>
</ScrollView>