<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
<LinearLayout
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <!--    android:background="@drawable/bg">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:background="@drawable/top_gradient"/>
    <TextView
        android:layout_marginTop="-60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:textColor="@color/Heading"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/exp"
        android:textSize="25sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/experi"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="0dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox" >

        <EditText
            android:id="@+id/nam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/expHint"
            android:maxLength="5"
            android:inputType="number"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="আপনি কি কোনো সংস্থার সদস্য? (যেমন কোপাই চারুলতা ওয়েলফেয়ার সোসাইটি, আমার কুঠি, ইত্যাদি)"
        android:textSize="25sp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textColor="@color/textColor"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/radioGroup"
        >

    <RadioButton
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="হ্যাঁ"
        android:layout_marginTop="20dp"
        android:textSize="20dp" />

    <RadioButton
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="না"
        android:layout_marginTop="10dp"
        android:textSize="20dp" />
    </RadioGroup>

    <Button
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        android:text="@string/submit"
        android:textSize="30sp"
        android:padding="10dp"
        android:background="@drawable/btn_round"
        android:layout_marginTop="40dp" />

</LinearLayout>
</ScrollView>