<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
    <LinearLayout
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <!--    android:background="@drawable/bg">-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/top_gradient"/>
        <TextView
            android:layout_marginTop="-60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Heading"
            />
        <TextView
            android:id="@+id/picInstruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/videocaptureinstnn"
            android:textSize="21sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColor"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


<!--        <VideoView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="300dp"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginBottom="30dp"-->
<!--            android:layout_marginStart="20dp"-->
<!--            android:layout_marginEnd="20dp"-->
<!--            android:id="@+id/videoview"-->
<!--            />-->

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube_player_view"
            android:layout_width="match_parent"
            android:layout_height="250dp"

            app:showYouTubeButton="false"
            android:layout_marginTop="50dp"
            app:videoId="S0Q4gqBUs7c"
            app:autoPlay="false"
            app:showFullScreenButton="false" />


<!--            app:showYouTubeButton="true"-->
<!--            -->
<!--            app:showFullScreenButton="false" />-->


        <Button
            android:id="@+id/submitBtnn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/next"
            android:textSize="30sp"
            android:padding="10dp"
            android:background="@drawable/btn_round"
            android:layout_marginTop="30dp" />

    </LinearLayout>
</ScrollView>