<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">
    <LinearLayout
        android:orientation="vertical"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <!--    android:background="@drawable/bg">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/top_gradient"/>
        <TextView
            android:layout_marginTop="-60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"

            android:textColor="@color/Heading"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:text="@string/artformString"
            android:textSize="25sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/textColor"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/radioGroup2"
            >
            <RadioButton
                android:id="@+id/radio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="কাঁথাস্টিচ"
                android:layout_marginTop="15dp"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="বাটিক প্রিন্ট"
                android:layout_marginTop="5dp"
                android:textSize="20dp" />
            <RadioButton
                android:id="@+id/radio3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="চামড়ার কাজ"
                android:layout_marginTop="5dp"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="জুয়েলারি"
                android:layout_marginTop="5dp"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radio5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="অন্যান্য শিল্প কর্ম"
                android:layout_marginTop="5dp"
                android:textSize="20dp" />
        </RadioGroup>




        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="@string/submit"
            android:textSize="30sp"
            android:padding="10dp"

            android:background="@drawable/btn_round"
            android:layout_marginTop="40dp" />

    </LinearLayout>
</ScrollView>