<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:fillViewport="false">

    <LinearLayout android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">
        <!--    android:background="@drawable/bg">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@drawable/top_gradient"/>
        <TextView
            android:layout_marginTop="-60dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/Heading"
            />

        <TextView
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="নিচের ক্যামেরা বাটনটি টিপুন এবং সেলফি মোডে আপনার নিজের একটা ছবি তুলুন |\n
নিচের দেওয়া ছবিটির মত করে আপনার ছবিটি তুলুন।"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:textColor="@color/textColor"
            />
        <ImageView
            android:id="@+id/img1"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/sampleprofilepic"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            />
        <Button
            android:id="@+id/start"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_photo_camera_24"
            android:padding="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:paddingStart="40dp"
            android:paddingEnd="20dp"
            android:text="আপনি কি পুনরায় ছবি তুলতে চান?"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:background="@drawable/btn_round"
                android:padding="10dp"
                android:text="@string/yes"
                android:textSize="30sp" />
            <Button
                android:id="@+id/no"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/No"
                android:textSize="30sp"
                android:padding="10dp"
                android:background="@drawable/btn_round"
                android:layout_marginTop="0dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/inst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:paddingStart="40dp"
            android:paddingEnd="20dp"
            android:visibility="invisible"
            android:text="আপনার সম্বন্ধে কিছু বলুন।"
            android:textColor="@color/textColor"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="horizontal">

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.5"
                android:visibility="invisible"
                android:background="@drawable/btn_round"
                android:padding="10dp"
                android:text="রেকর্ড করুন"
                android:textSize="25sp" />
            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="শেষ করুন"
                android:textSize="25sp"
                android:padding="10dp"
                android:visibility="invisible"
                android:background="@drawable/btn_round"
                android:layout_marginTop="0dp" />
        </LinearLayout>

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:text="পরবর্তী"
            android:textSize="30sp"
            android:padding="10dp"
            android:visibility="invisible"
            android:background="@drawable/btn_round"
            android:layout_marginTop="20dp" />


    </LinearLayout>
</ScrollView>